[gd_scene load_steps=6 format=3 uid="uid://itv1k62vplmq"]

[ext_resource type="Script" path="res://multiplayer.gd" id="1_bqji1"]
[ext_resource type="PackedScene" uid="uid://bqn3h56ch5gtd" path="res://player/player.tscn" id="2_8h4kd"]
[ext_resource type="Script" path="res://ui/game_ui.gd" id="3_moqkh"]
[ext_resource type="PackedScene" uid="uid://bu74xn3hlof5n" path="res://level.tscn" id="4_gmx68"]

[sub_resource type="Theme" id="Theme_5cf16"]
LineEdit/font_sizes/font_size = 12

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_bqji1")
player_scene = ExtResource("2_8h4kd")

[node name="MenuUI" type="MarginContainer" parent="."]
process_mode = 3
offset_right = 1152.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="MenuUI"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuUI/CenterContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="MenuUI/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="Start" type="Button" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Start Game"

[node name="Join" type="Button" parent="MenuUI/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="Address" type="LineEdit" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "127.0.0.1"
expand_to_text_length = true

[node name="Port" type="LineEdit" parent="MenuUI/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "9595"

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource("3_moqkh")

[node name="Messages" type="Label" parent="GameUI"]
offset_left = 12.0
offset_top = 399.0
offset_right = 403.0
offset_bottom = 603.0

[node name="MessageLine" type="LineEdit" parent="GameUI"]
offset_left = 15.0
offset_top = 608.0
offset_right = 340.0
offset_bottom = 639.0
theme = SubResource("Theme_5cf16")
placeholder_text = "Message..."
flat = true

[node name="Level" parent="." instance=ExtResource("4_gmx68")]

[node name="Players" type="Node2D" parent="."]

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player/player.tscn")
spawn_path = NodePath("../Players")

[node name="StartTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 20.0
one_shot = true

[connection signal="pressed" from="MenuUI/CenterContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MenuUI/CenterContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuUI/CenterContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="focus_entered" from="GameUI/MessageLine" to="GameUI" method="_on_message_line_focus_entered"]
[connection signal="focus_exited" from="GameUI/MessageLine" to="GameUI" method="_on_message_line_focus_exited"]
[connection signal="text_submitted" from="GameUI/MessageLine" to="GameUI" method="_on_line_edit_text_submitted"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
